# cfgsync

./: .clang-format  .clang-tidy  .clang-uml  .gitignore  .yamllint  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: cmake-multi-platform.yml
cmake/: CfgsyncTesting.cmake
docs/diagrams/: architecture_overview.puml  diff_layer.puml  include_dependencies.puml  watch_layer.puml
docs/diagrams/main/: app_entrypoint.puml  architecture_overview.puml  cli_commands_layer.puml  command_include_dependencies.puml  core_and_config.puml  diff_layer.puml  layer_include_dependencies.puml  storage_layer.puml  watch_include_dependencies.puml  watch_layer.puml
src/: App.cpp  App.hpp  Exceptions.hpp  main.cpp
src/cli/: BuildCli.cpp  BuildCli.hpp
src/commands/: AddCommand.cpp  AddCommand.hpp  BackupCommand.cpp  BackupCommand.hpp  DiffCommand.cpp  DiffCommand.hpp  InitCommand.cpp  InitCommand.hpp  ListCommand.cpp  ListCommand.hpp  RemoveCommand.cpp  RemoveCommand.hpp  RestoreCommand.cpp  RestoreCommand.hpp  RestoreDryRunPreview.cpp  RestoreDryRunPreview.hpp  StatusCommand.cpp  StatusCommand.hpp  UseCommand.cpp  UseCommand.hpp  WatchCommand.cpp  WatchCommand.hpp
src/core/: AppConfig.cpp  AppConfig.hpp  Registry.cpp  Registry.hpp  TrackedEntry.hpp
src/diff/: FileComparator.cpp  FileComparator.hpp  UnifiedDiff.cpp  UnifiedDiff.hpp
src/storage/: StorageManager.cpp  StorageManager.hpp
src/utils/: AppConfigPath.cpp  AppConfigPath.hpp  FileUtils.cpp  FileUtils.hpp  LogUtils.hpp  PathUtils.cpp  PathUtils.hpp  TerminalStyle.cpp  TerminalStyle.hpp
src/watch/: EfswFileWatcher.cpp  EfswFileWatcher.hpp  FileWatchEvent.hpp  FileWatchObserver.hpp  FileWatcher.hpp  WatchBackupProcessor.cpp  WatchBackupProcessor.hpp
tests/: AddCommandCliTests.cpp  AddCommandTests.cpp  AppConfigTests.cpp  BackupCommandCliTests.cpp  BackupCommandTests.cpp  DiffCommandCliTests.cpp  DiffCommandTests.cpp  FileComparatorTests.cpp  FileWatcherTests.cpp  ListCommandCliTests.cpp  ListCommandTests.cpp  PathFileUtilsTests.cpp  RegistryInitTests.cpp  RegistryTests.cpp  RemoveCommandCliTests.cpp  RemoveCommandTests.cpp  RestoreCommandCliTests.cpp  RestoreCommandTests.cpp  StatusCommandCliTests.cpp  StatusCommandTests.cpp  StorageManagerTests.cpp  TerminalStyleTests.cpp  UnifiedDiffTests.cpp  UseCommandCliTests.cpp  UseCommandTests.cpp  WatchBackupProcessorTests.cpp  WatchCommandCliTests.cpp  WatchCommandTests.cpp
tests/common/: CliCommandTestFixture.hpp  CliTestUtils.cpp  CliTestUtils.hpp  GoogleTestMain.hpp  RegistryCommandTestFixture.hpp  StyledDiffTestUtils.hpp  TestFileUtils.hpp  TestRegistryUtils.hpp  TestSupportError.hpp  TestTempDirectory.cpp  TestTempDirectory.hpp
